# xeus-julia

./: .gitignore  CMakeLists.txt  CMakeLists.txt.original  LICENSE  README.md  environment-dev.yml  environment.yml  julia_pc_gen.txt  runner.sh  xeus-juliaConfig.cmake.in
.github.suspend/workflows/: main.yml
docs/source/: dev-build-options.rst  index.rst
extras/: FindJulia.cmake  FindJulia.cmake.source
include/xeus-julia/: xeus_julia_config.hpp  xinterpreter.hpp
notebooks/: xeus-julia.ipynb
share/jupyter/kernels/xjulia/: kernel.json.in
src/: main.cpp  xinterpreter.cpp
test/: test_xjulia_kernel.py
